# Radium-Engine

Applications/MainApplication/Gui/: MainWindow.cpp
Plugins/: CMakeLists.txt
Plugins/FancyMesh/src/: FancyMeshComponent.hpp
Shaders/: CircleBrush.frag.glsl  PickingPoints.geom.glsl
Shaders/Picking/: PickingPoints.geom.glsl
Shaders/Points/: PointCloud.geom.glsl
src/: CMakeLists.txt
src/Core/Animation/: Skeleton.cpp
src/Core/Geometry/: DistanceQueries.inl  Spline.inl
src/Core/Index/: IndexMap.hpp  IndexMap.inl
src/Core/Math/: LinearAlgebra.inl  Math.inl
src/Engine/Managers/EntityManager/: EntityManager.cpp  EntityManager.hpp
src/Engine/Renderer/: Renderer.cpp  Renderer.hpp
src/Engine/Renderer/Displayable/: DisplayableObject.hpp
src/Engine/Renderer/Mesh/: Mesh.hpp
src/Engine/Renderer/RenderObject/: RenderObject.cpp  RenderObject.hpp
src/Engine/Renderer/Renderers/: ForwardRenderer.cpp
src/GuiBase/: BaseApplication.cpp
src/GuiBase/SelectionManager/: SelectionManager.cpp  SelectionManager.hpp
src/GuiBase/Viewer/: TrackballCamera.cpp  TrackballCamera.hpp  TrackballCameraManipulator.cpp  TrackballCameraManipulator.hpp  Viewer.cpp  Viewer.hpp
src/PluginBase/: PluginContext.hpp
